updated to 3.8
added random event
added tictactoe
chage to use streamelements poits